# Txti

./: .gitignore  CMakeLists.txt  README.md
include/: fileSystem.hpp  textEditor.hpp
src/: main.cpp  textEditor.cpp
